--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,7 +30,6 @@ body {
 header {
     box-sizing: border-box;
     border-bottom: 5px solid #cf0311;
-    border-top: 5px solid #cf0311;
     padding: 12px;
     background: #f8bbd0;
     padding-left: 21px;
